extends CenterContainer

onready var material_1 = get_node("NinePatchRect/Material_1")
onready var amount_1 = get_node("NinePatchRect/Material_1/amount")
onready var amount_2 = get_node("NinePatchRect/Material_2/amount")
onready var amount_3 = get_node("NinePatchRect/Material_3/amount")
onready var material_2 = get_node("NinePatchRect/Material_2")
onready var material_3 = get_node("NinePatchRect/Material_3")
onready var item_name = get_node("NinePatchRect/Item_Name")
onready var item_icon = get_node("NinePatchRect/Craft_Button/Item_Icon")
onready var button  = get_node("NinePatchRect/Craft_Button")
